<resources>
    <string name="app_name">BluetoothPrinterInvoiceApp</string>
    <string name="bizarnet">Bizarnet</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="transfer_data">Transfer Data</string>
    <string name="settings">Settings</string>
    <string name="scan_qr_code_">Scan QR Code...</string>
    <string name="total_amount_you_should_pay">Total Amount You Should Pay</string>
    <string name="id1">ID1</string>
    <string name="id2">ID2</string>
    <string name="completion_date">Completion Date :</string>
    <string name="amount_funded">Amount Funded</string>
    <string name="payback_amount">Payback Amount</string>
    <string name="write_details_for_this_receipt">Write Details for This Receipt</string>
    <string name="call_client">CAll Client</string>
    <string name="fund_payment">Fund Payment</string>
    <string name="check_out">Check Out</string>
    <string name="phone_numbers">Phone Numbers</string>
    <string name="fund_amount">Fund Amount</string>
    <string name="type_amount_to_pay">Type Amount to Pay</string>
    <string name="pay">Pay</string>

    <string name="preference_file_key">com.example.bluetoothprinterinvoiceapp.setting.file</string>
    <string name="preference_username_key">com.ecare.printer.settings.username</string>
    <string name="preference_company_key">com.ecare.printer.settings.company</string>
    <string name="preference_receipt_series_key">com.ecare.printer.settings.receipt_series</string>
    <string name="preference_receipt_number_key">com.ecare.printer.settings.receipt_number</string>
    <string name="preference_transmit_key">com.ecare.printer.settings.transmit</string>
    <string name="preference_server_url_key">com.ecare.printer.settings.server_url</string>
</resources>