<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_400"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@color/gray_400">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fund_amount"
            android:textColor="@color/gray_800"
            android:gravity="center"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center"
        android:textAlignment="center"
        android:padding="10dp">
        <EditText
            android:id="@+id/edit_amount_text"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/type_amount_to_pay"
            android:background="@null"
            android:textColor="@color/gray_800"
            android:textSize="24sp"
            android:textColorHint="@color/gray_800"
            android:gravity="center"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:ems="10"
            android:autofillHints="Type Amount To Pay" />

        <Button
            android:id="@+id/fund_payment_btn"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/pay"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:background="@drawable/red_button"/>
    </LinearLayout>


</LinearLayout>