<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.FundActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="64dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingBottom="32dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:id="@+id/name_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/black_400" />
                <TextView
                    android:id="@+id/invoice_number_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textSize="12sp"
                    android:textColor="@color/black_400"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
            <TextView
                android:id="@+id/address_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_400"
                android:textSize="12sp"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="32dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingBottom="32dp"
                android:background="@color/gray_400">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_amount_you_should_pay"
                        android:textStyle="bold"
                        android:textColor="@color/gray_800"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/value_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/allerta_stencil"
                        android:textColor="@color/black_400"
                        android:textSize="56sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap">
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="10dp" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:background="@color/gray_400"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/allerta_stencil"
                            android:text="@string/id1"
                            android:textSize="12sp" />
                        <TextView
                            android:id="@+id/id1_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:fontFamily="@font/allerta_stencil"
                            android:textSize="12sp"
                            android:layout_marginStart="8dp" />
                    </LinearLayout>
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="8dp" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:background="@color/gray_400">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/allerta_stencil"
                            android:text="@string/id2"
                            android:textSize="12sp" />
                        <TextView
                            android:id="@+id/id2_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:fontFamily="@font/allerta_stencil"
                            android:textSize="12sp"
                            android:layout_marginStart="8dp" />
                    </LinearLayout>
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="10dp" />
                </LinearLayout>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border"
                android:layout_gravity="bottom|center"
                android:orientation="horizontal"
                android:layout_marginTop="145dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completion_date"/>
                <TextView
                    android:id="@+id/date_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_400" />
            </LinearLayout>
        </FrameLayout>
        <LinearLayout
            android:id="@+id/payment_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:weightSum="2"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:background="@color/gray_400"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/funded_payment_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerta_stencil"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="32sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="@color/gray_800"
                    android:text="@string/amount_funded"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:background="@color/gray_400"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/payback_amount_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerta_stencil"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="32sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="@color/gray_800"
                    android:text="@string/payback_amount"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/write_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_details_for_this_receipt"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/write_details_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/editor_border"
                android:textSize="16sp"
                android:textColor="@color/gray_800"
                android:layout_marginTop="4dp"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:autofillHints="Write Details Info for Invoice here..."
                android:inputType="text"
                tools:ignore="LabelFor,RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">
        <Button
            android:id="@+id/call_client_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_client"
            android:background="@drawable/green_button"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/fund_payment_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fund_payment"
            android:background="@drawable/red_button"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/checkout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_out"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>